# magic-8-ball

./: README.md  main.py  pyproject.toml
src/: main.py
